0025804: Visualization, TKOpenGl - specify correct primitives type in OpenGl_BackgroundArray

Remarks: - counterclockwise order of vertices for gradient background array initialization.